infrastructure/networking/gateway/gateway-internal.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-internal
  namespace: gateway
spec:
  addresses:
  - type: IPAddress
    value: 10.10.2.2
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.coruscant.yarnold.co.uk"
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.coruscant.yarnold.co.uk"
      tls:
        certificateRefs:
          - name: cert-coruscant
            kind: Secret
            group: ""
      allowedRoutes:
        namespaces:
          from: All
